fix daterange picker in dark mode

--- a/assets/sass/daterangepicker.scss
+++ b/assets/sass/daterangepicker.scss
@@ -1,18 +1,21 @@
 @import '~daterangepicker/daterangepicker.css';
 
-.drp-calendar {
-    .calendar-table {
-        td.today:not(.active) {
-            background-color: lighten(#357ebd, 40);
-            color: #357ebd;
-        }
-        select.yearselect{
-            width: unset;
+.daterangepicker {
+    .drp-calendar {
+        .calendar-table {
+            td.today:not(.active) {
+                background-color: lighten(#357ebd, 40);
+                color: #357ebd;
+            }
+
+            select.yearselect {
+                width: unset;
+            }
         }
     }
-}
 
-.daterangepicker .calendar-table td,
-.daterangepicker .calendar-table th {
-    padding: 4px;
+    .calendar-table td,
+    .calendar-table th {
+        padding: 4px;
+    }
 }
